unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/FS_Leadership_Role_and_Title__c.object-meta.xml
<CustomObject>
    <description>Child object of the Community Group Member, will hold leadership roles and titles</description>
    <label>Leadership Role and Title</label>
    <nameField>
        <displayFormat>LN-{000000}</displayFormat>
        <label>Leadership Role and Title Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leadership Roles and Titles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>