unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/fields/FS_Community_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>FS_Community_Group_Member__c</fullName>
    <description>Linked to the Community Group Member</description>
    <inlineHelpText>Linked to the Community Group Member</inlineHelpText>
    <label>Community Group Member</label>
    <referenceTo>PagesApi__Community_Group_Member__c</referenceTo>
    <relationshipLabel>Leadership Roles and Titles</relationshipLabel>
    <relationshipName>Leadership_Roles_and_Titles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>