unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/fields/FS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_End_Date__c</fullName>
    <description>End Date of this Leadership Role and Title position for this Community Group Member</description>
    <inlineHelpText>End Date of this Leadership Role and Title position for this Community Group Member</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>