unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/fields/FS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Active__c</fullName>
    <description>Checkbox is True if Today's date falls in between Start Date and End Date</description>
    <formula>IF(AND(FS_Start_Date__c &lt;= TODAY(), FS_End_Date__c &gt;= TODAY()),true,IF(AND(FS_Start_Date__c &lt;= TODAY(), ISBLANK (FS_End_Date__c)), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checkbox is True if Today's date falls in between Start Date and End Date</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>