unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/fields/FS_Leadership_External_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Leadership_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Leadership External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>