unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/fields/FS_Leadership_Role__c.field-meta.xml
<CustomField>
    <fullName>FS_Leadership_Role__c</fullName>
    <description>Leadership Role for the Community Group Member during this time period</description>
    <inlineHelpText>Leadership Role for the Community Group Member during this time period</inlineHelpText>
    <label>Leadership Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>010 - President</fullName>
            </value>
            <value>
                <fullName>020 - Chair</fullName>
            </value>
            <value>
                <fullName>030 - Chair-Elect</fullName>
            </value>
            <value>
                <fullName>040 - Vice-Chair</fullName>
            </value>
            <value>
                <fullName>050 - Treasurer</fullName>
            </value>
            <value>
                <fullName>060 - Financial Officer</fullName>
            </value>
            <value>
                <fullName>070 - Secretary</fullName>
            </value>
            <value>
                <fullName>080 - Delegate</fullName>
            </value>
            <value>
                <fullName>090 - Alternate</fullName>
            </value>
            <value>
                <fullName>110 - District Representative</fullName>
            </value>
            <value>
                <fullName>120 - Former Chair</fullName>
            </value>
            <value>
                <fullName>130 - Ex-Officio Member</fullName>
            </value>
            <value>
                <fullName>140 - Honorary Member</fullName>
            </value>
            <value>
                <fullName>160 - Other</fullName>
            </value>
            <value>
                <fullName>170 - Internal (NYSBA) Group Liaison</fullName>
            </value>
            <value>
                <fullName>180 - External Group Liaison</fullName>
            </value>
            <value>
                <fullName>190 - Non-Attorney Advisor</fullName>
            </value>
            <value>
                <fullName>200 - Staff Liaison</fullName>
            </value>
            <value>
                <fullName>210 - CLE Staff Liaison</fullName>
            </value>
            <value>
                <fullName>999 - Unmapped Legacy Position</fullName>
            </value>
            <value>
                <fullName>220 - Distribution List Only</fullName>
            </value>
            <value>
                <fullName>100 - Member</fullName>
                <isActive>false</isActive>
                <label>100 - Member</label>
            </value>
            <value>
                <fullName>150 - Student Member</fullName>
                <isActive>false</isActive>
                <label>150 - Student Member</label>
            </value>
            <value>
                <fullName>Council Director</fullName>
                <isActive>false</isActive>
                <label>Council Director</label>
            </value>
            <value>
                <fullName>Executive Committee</fullName>
                <isActive>false</isActive>
                <label>Executive Committee</label>
            </value>
            <value>
                <fullName>MSS</fullName>
                <isActive>false</isActive>
                <label>MSS</label>
            </value>
            <value>
                <fullName>Manager</fullName>
                <isActive>false</isActive>
                <label>Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>