unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/fields/FS_Leadership_Title__c.field-meta.xml
<CustomField>
    <fullName>FS_Leadership_Title__c</fullName>
    <description>Leadership Title for this Leadership Role and Title during this time period</description>
    <inlineHelpText>Leadership Title for this Leadership Role and Title  during this time period</inlineHelpText>
    <label>Leadership Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>