unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/fields/FS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Start_Date__c</fullName>
    <description>Start Date of this Leadership Role and Title position for this Community Group Member</description>
    <inlineHelpText>Start Date of this Leadership Role and Title position for this Community Group Member</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>