unpackaged/main/default/objects/FS_Leadership_Role_and_Title__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>FS_End_Date__c</columns>
    <columns>FS_Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>